--- a/ShipRent/src/main/webapp/resources/css/estilo.css
+++ b/ShipRent/src/main/webapp/resources/css/estilo.css
@@ -45,3 +45,73 @@ body {
         width: 100%;
     }
 }
+
+.btn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing:border-box;
+}
+
+input[type=text], select {
+	width: 100%;
+	padding:12px 20px;
+	margin:	8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing:border-box;
+}
+
+input[type=number], select {
+	width: 100%;
+	padding:12px 20px;
+	margin:	8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing:border-box;
+}
+
+input[type=radio], select {
+	width: 100%;
+	padding:12px 20px;
+	margin:	8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing:border-box;
+}
+
+input[type=submit] { 
+	background-color: #4CAF50;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+input [type=submit]:hover {
+	background-color: 
+	#45a049;
+}
+
+#tabelas {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#tabelas td, #tabelas th {
+    border: 1px solid #333;
+    padding: 8px;
+}
+
+#tabelas tr:nth-child(even){background-color: #f2f2f2;}
+
+#tabelas tr:hover {background-color: #ddd;}
