--- a/ShipRent/src/main/webapp/resources/css/estilo.css
+++ b/ShipRent/src/main/webapp/resources/css/estilo.css
@@ -32,19 +32,6 @@ body {
 	color: white;	
 }
 
-@media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {   
-        width: 100%;
-        padding: 0;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .navtop a {
-        float: none;
-        width: 100%;
-    }
-}
 
 .btn {
 	background-color: #4CAF50;
@@ -101,17 +88,33 @@ input [type=submit]:hover {
 	#45a049;
 }
 
-#tabelas {
+table {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#tabelas td, #tabelas th {
+td { 
     border: 1px solid #333;
     padding: 8px;
 }
 
-#tabelas tr:nth-child(even){background-color: #f2f2f2;}
+th {
+	border: 1px solid #333;
+    padding: 8px;
+}
 
-#tabelas tr:hover {background-color: #ddd;}
+
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+        width: 100%;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .navtop a {
+        float: none;
+        width: 100%;
+    }
+}
