--- a/ShipRent/src/main/webapp/resources/css/estilo.css
+++ b/ShipRent/src/main/webapp/resources/css/estilo.css
@@ -34,7 +34,7 @@ body {
 
 
 .btn {
-	background-color: #4CAF50;
+	background-color: #555555;
 	color: white;
 	padding: 12px 20px;
 	display: inline-block;
@@ -54,7 +54,7 @@ input[type=text], select {
 }
 
 input[type=number], select {
-	width: 100%;
+	width: 50%;
 	padding:12px 20px;
 	margin:	8px 0;
 	display: inline-block;
@@ -64,7 +64,7 @@ input[type=number], select {
 }
 
 input[type=radio], select {
-	width: 100%;
+	width: 50%;
 	padding:12px 20px;
 	margin:	8px 0;
 	display: inline-block;
@@ -74,7 +74,7 @@ input[type=radio], select {
 }
 
 input[type=submit] { 
-	background-color: #4CAF50;
+	background-color: #555555;
 	color: white;
 	padding: 14px 20px;
 	margin: 8px 0;
@@ -102,6 +102,13 @@ td {
 th {
 	border: 1px solid #333;
     padding: 8px;
+}
+
+select{
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    background: #f2f2f3;
 }
 
 
